# data-warehouses

./: .gitignore  README.md
dashboard/: dashboard.pbix
data_generator/: .gitignore  database.py  pyproject.toml  timeline.py
data_generator/helpful/: __init__.py  better_dict.py  functions.py
data_generator/tables/: __init__.py  address.py  order.py  package.py  parcel_locker.py  person.py  sorting_center.py  stage.py  user.py  worker.py
data_warehouse_implementation/: createDB.sql  createTables.sql  dropTables.sql  insert.sql
data_warehouse_implementation/ETL/: test.txt
data_warehouse_implementation/ETL/OutPostIntegreationService/: Initial Data.dtsx  OutPostIntegreationService.database  OutPostIntegreationService.dtproj  Package.dtsx  Package1.dtsx  initialData.dtsx  measuresCaltulations.cs  properLoading.dtsx
data_warehouse_implementation/HDlab4/: HDlab4.sln
data_warehouse_implementation/HDlab4/HDlab4/: Data.dim  HDlab4.database  HDlab4.dwproj  Miejsce 1.dim  Miejsce.dim  Out Postdw.cube  Out Postdw.ds  Out Postdw.dsv  Out Postdw.partitions  OutPostdw.cube  OutPostdw.dsv  OutPostdw.partitions  Paczka 1.dim  Paczka.dim  Pracownik.dim  Typ 1.dim  Typ.dim  Zlecenie.dim
data_warehouse_implementation/MDX/: MDXQuery1.mdx  queries.md
data_werhouse_implementation/: createDB.sql  createRelationalDB.sql  createTables.sql  insert.sql  selectAllRows.sql
data_werhouse_implementation/HDlab4/: HDlab4.sln
database_schema/: create.sql  load.sql
processes_spec/: ProcessesSpecification.url  RequirementsProcessSpecification.url
(+38 files in other folders)
