[tool.poetry]
name = "data-generator"
version = "0.1.0"
description = ""
authors = ["qaziok <72215548+qaziok@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "data_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^15.2.0"
numpy = "^1.23.4"
pandas = "^1.5.1"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
